Bug 1478570 - Fix ExternalImageId allocation of AsyncImagePipelineManager r=jrmuizel